--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@supabase/supabase-js": "^2.47.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cookies-next": "^5.0.2",
     "dotenv": "^16.4.7",
     "immer": "^10.1.1",
     "lucide-react": "^0.468.0",
